# ChangeLog for x11-misc/xdaf
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xdaf/ChangeLog,v 1.4 2003/10/04 04:09:38 matsuu Exp $

*xdaf-0.01.11.01 (04 Oct 2003)

  04 Oct 2003; MATSUU Takuto <matsuu@gentoo.org> xdaf-0.01.11.01.ebuild:
  version bump

  12 Jun 2003; <msterret@gentoo.org> xdaf-0.01.10.ebuild:
  fix Header

*xdaf-0.01.10 (4 Nov 2002)
  
  4 Nov 2002; Matt Keadle <mkeadle@gentoo.org> xdaf-0.01.10.ebuild
  files/digest-xdaf-0.01.10:

  Added initial ChangeLog which should be updated whenever the package is
  updated in any way.

  The release version is actually called xdaf-A.01.10, but portage doesn't
  like an ebuild with that name. Slight workaround with 0.01.10 and munging
  inside the ebuild, but it works.