@@ -1,6 +1,6 @@
+MD5 fc6df70ec3fe0a7c39018b3da578f01e xdaf-0.01.11.01.ebuild 744
+MD5 0b7489be160638afb04b6cdf553ebcca xdaf-0.01.10.ebuild 694
+MD5 da20fee0b1662895b74e6642abcb443d ChangeLog 956
+MD5 cdb11033a3fa6525334cecf938961c07 metadata.xml 166
 MD5 60e01aa1f9560f39165d0b00b397e04a files/digest-xdaf-0.01.10 63
 MD5 7f7bdf02daa4d45f90c847b29d6413dd files/digest-xdaf-0.01.11.01 66
-MD5 857c3c9cc709589e303beb4d3647334e xdaf-0.01.11.01.ebuild 744
-MD5 1f5d1455445cca14380249ca6564fb41 xdaf-0.01.10.ebuild 707
-MD5 c50c72008f6ea53bb96bd278730d41be ChangeLog 811
-MD5 cdb11033a3fa6525334cecf938961c07 metadata.xml 166
