@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/xdaf
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xdaf/ChangeLog,v 1.4 2003/10/04 04:09:38 matsuu Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xdaf/ChangeLog,v 1.5 2004/01/26 17:03:03 pyrania Exp $
+
+  26 Jan 2004; Markus Nigbur <pyrania@gentoo.org> xdaf-0.01.10.ebuild,
+  xdaf-0.01.11.01.ebuild:
+  mirror://sourceforge, marked stable on x86.
 
 *xdaf-0.01.11.01 (04 Oct 2003)
 
